Suite avec ajout documentation Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# ================= JWT =================
+app.jwt.secret=VGhpc0lzQVVBU1pNYWludGVuYW5jZUFwcFNlY3JldEtleTEyMzQ1Ng==
+# 1 jour en millisecondes
+app.jwt.expiration=86400000
+# Clé secrète JWT (au moins 32 caractères)
+application.security.jwt.secret=MaSuperCleUltraSecretePourUASZMaintenance123!
+
+# Durée de validité du token en millisecondes (ici : 24h)
+application.security.jwt.expiration=86400000
