Insertion dans la BD et affichage des Techniciens dans le Dashboard Reponsable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ application.security.jwt.secret=MaSuperCleUltraSecretePourUASZMaintenance123!
 
 # Durée de validité du token en millisecondes (ici : 24h)
 application.security.jwt.expiration=86400000
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
