--- a/uasz-maintenance-frontend/package.json
+++ b/uasz-maintenance-frontend/package.json
@@ -31,7 +31,7 @@
     "@angular/material": "^20.2.13",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
-    "jspdf": "^3.0.4",
+    "jspdf": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -42,6 +42,7 @@
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
     "@types/jspdf": "^1.3.3",
+    "baseline-browser-mapping": "^2.9.16",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
